# openrouter-models-chatting

./: API_REFERENCE.txt  ARCHITECTURE.txt  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.txt  EXAMPLES.txt  PROJECT_INFO.txt  QUICKSTART.txt  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
ai/: main.py
ai/core/: chat_handler.py  logging.conf  openrouter_checker.py  rate_limiter.py  stream_handler.py  utils.py
ai/core/setting_models/: __init__.py  model_config.py
ai/core/setting_models/configs/: default.yaml
core/: model_fallback.py
core/setting_models/: model_pinger.py
