[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-checker"
version = "1.0.0"
description = "OpenRouter AI Model Checker and Interactive Chat Manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CLASHSSD", email = "contact@openrouter.ai"}
]
keywords = [
    "openrouter",
    "ai",
    "chat",
    "api",
    "rate-limit",
    "fallback",
    "streaming"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]

[project.urls]
"Homepage" = "https://github.com/clashssd/openrouter-checker"
"Bug Reports" = "https://github.com/clashssd/openrouter-checker/issues"
"Source" = "https://github.com/clashssd/openrouter-checker"
"Documentation" = "https://github.com/clashssd/openrouter-checker#readme"

[project.scripts]
openrouter-checker = "ai.main:main"

[tool.setuptools]
packages = ["ai", "ai.core", "ai.core.setting_models"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [".git", ".venv", "__pycache__", "build", "dist"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pylint]
max-line-length = 100
disable = ["C0111", "C0103", "R0903"]

[tool.pytest.ini_options]
testpaths = ["ai/test.py"]
python_files = "test*.py"
addopts = "-v --tb=short"
